portfolio section started

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,6 @@
                     <img src="assets/images/blob.svg">
                     <img src="assets/images/alex-pic.png" alt="Graphic Designer">
                 </div>
-                <!-- <h1 class="img-description">Alex <span class="last-name">Metzger</span></h1> -->
             </div>
         </div>
     </header>
@@ -52,6 +51,32 @@
         <div class="paragraphs">
             <p>I'm an aspiring software developer from Houston, TX, currently pursuing a graduate degree in Artificial Intelligence at the University of Northern Texas. My diverse experiences have fueled my passion for technology and problem-solving through code.</p>
             <p>As I work toward transitioning into the software development industry, I’m eager to apply my AI knowledge to real-world projects. My goal is to create intelligent, impactful applications that make a difference.</p>
+        </div>
+    </section>
+
+    <section class="portfolio-section">
+        <h1>Recent Projects</h1>
+        <div class="card-container">
+            <div class="card omniclip-card">
+            <!-- <div class="card-image">
+                <img src="assets/images/omniclip-thumbnail.jpg" alt="Omniclip Logo">
+            </div> -->
+            <div class="card-title">OmniClip</div>
+            </div>
+            
+            <div class="card">
+            <!-- <div class="card-image">
+                <img src="image2.jpg" alt="Image 2">
+            </div> -->
+            <div class="card-title">Card Title 2</div>
+            </div>
+        
+            <div class="card">
+            <!-- <div class="card-image">
+                <img src="image3.jpg" alt="Image 3">
+            </div> -->
+            <div class="card-title">Card Title 3</div>
+            </div>
         </div>
     </section>
 </body>
