--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
             PlayAI.open('0wDta2U5IN1EU0QQOJ-w4');
         });
     </script>
+    <script src="js/IntersectionObserver.js"></script>
 </head>
 <body>
     <header class="hero">
@@ -40,10 +41,11 @@
                 </div>
             </div>
         </div>
-        <section class="section-divider">
-            <div class="skewed"></div>
-        </section>
     </header>
+
+    <section class="section-divider">
+        <div class="skewed-right"></div>
+    </section>
 
 
     <section class="about-section">
@@ -58,26 +60,28 @@
         <h1>Recent Projects</h1>
         <div class="card-container">
             <div class="card omniclip-card">
-            <!-- <div class="card-image">
-                <img src="assets/images/omniclip-thumbnail.jpg" alt="Omniclip Logo">
-            </div> -->
-            <div class="card-title">OmniClip</div>
+                <div class="card-title">OmniClip</div>
             </div>
             
-            <div class="card">
-            <!-- <div class="card-image">
-                <img src="image2.jpg" alt="Image 2">
-            </div> -->
-            <div class="card-title">Card Title 2</div>
+            <div class="card tdd-card">
+                <div class="card-title">The Domain Designers</div>
             </div>
         
             <div class="card">
-            <!-- <div class="card-image">
-                <img src="image3.jpg" alt="Image 3">
-            </div> -->
-            <div class="card-title">Card Title 3</div>
+                <div class="card-title">Card Title 3</div>
             </div>
         </div>
+    </section>
+
+    <section class="section-divider">
+        <div class="skewed-left"></div>
+    </section>
+
+    <section class="scroll-section">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+        <div class="shape shape-4"></div>
     </section>
 </body>
 </html>
