made scroll section generate shapes dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             PlayAI.open('0wDta2U5IN1EU0QQOJ-w4');
         });
     </script>
-    <script src="js/IntersectionObserver.js"></script>
+    <script src="js/ShapeIntersectionObserver.js"></script>
 </head>
 <body>
     <header class="hero">
@@ -78,10 +78,7 @@
     </section>
 
     <section class="scroll-section">
-        <div class="shape shape-1"></div>
-        <div class="shape shape-2"></div>
-        <div class="shape shape-3"></div>
-        <div class="shape shape-4"></div>
+        <div class="shape-container"></div>
     </section>
 </body>
 </html>
