--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             PlayAI.open('0wDta2U5IN1EU0QQOJ-w4');
         });
     </script>
-    <script src="js/ShapeIntersectionObserver.js"></script>
+    <script src="js/IntersectionObserver.js"></script>
 </head>
 <body>
     <header class="hero">
@@ -79,6 +79,18 @@
 
     <section class="scroll-section">
         <div class="shape-container"></div>
+        <!-- <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+        <div class="shape shape-4"></div>
+        <div class="shape shape-5"></div>
+        <div class="shape shape-6"></div>
+        <div class="shape shape-7"></div>
+        <div class="shape shape-8"></div>
+        <div class="shape shape-9"></div>
+        <div class="shape shape-10"></div>
+        <div class="shape shape-11"></div>
+        <div class="shape shape-12"></div> -->
     </section>
 </body>
 </html>
