tweaks to resume section

--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,6 @@
             <div class="card tdd-card">
                 <div class="card-title">The Domain Designers</div>
             </div>
-        
-            <div class="card">
-                <div class="card-title">Card Title 3</div>
-            </div>
         </div>
     </section>
 
@@ -110,7 +106,7 @@
                         <ul>
                             <li>Unloaded trailers using power equipment</li>
                             <li>Ensured pallet case counts were correct</li>
-                            <li>Used Walmart’s freight processing and inventory systems to process incoming freight</li>
+                            <li>Used Walmart's freight processing and inventory systems to process incoming freight</li>
                         </ul>
                         <h3>IT Trainee | ECS | Houston, TX</h3>
                         <p>August 2023 - August 2024</p>
@@ -124,15 +120,15 @@
                     <div class="education">
                         <h2>Education</h2>
                         <h3>MS Artificial Intelligence | University of North Texas</h3>
-                        <p>May 2023</p>
+                        <p>In Progress</p>
                         <h3>BS Computer Science | Southern New Hampshire University</h3>
                         <p>Graduated Magna Cum Laude | GPA: 3.73</p>
                     </div>
             
-                    <div class="profiles">
+                    <!-- <div class="profiles">
                         <h2>Website, Portfolio and Profiles</h2>
                         <p><a href="https://github.com/Metameg">GitHub</a> | <a href="https://alex-metzger.com">Portfolio</a></p>
-                    </div>
+                    </div> -->
                 </div>
             </section>
         </div>
