buttons added to respective sections

--- a/src/index.html
+++ b/src/index.html
@@ -59,10 +59,13 @@
             <div class="card omniclip-card">
                 <div class="card-title">OmniClip</div>
             </div>
-            
             <div class="card tdd-card">
                 <div class="card-title">The Domain Designers</div>
             </div>
+        </div>
+
+        <div class="button-container">
+            <a href="#" class="custom-btn portfolio-btn">Source Code</a>
         </div>
     </section>
 
@@ -129,10 +132,12 @@
                         <h2>Website, Portfolio and Profiles</h2>
                         <p><a href="https://github.com/Metameg">GitHub</a> | <a href="https://alex-metzger.com">Portfolio</a></p>
                     </div> -->
+                    <div class="button-container">
+                        <a href="#" class="custom-btn portfolio-btn">Download PDF</a>
+                    </div>
                 </div>
             </section>
         </div>
-        
     </section>
 
 </body>
