added contact form and footer

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,12 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+
+            <ul class="social-icons">
+                <li><a href="#"><img src="assets/icons/email.svg" width="50" height="50"></a></li>
+                <li><a href="#"><img src="assets/icons/phone.svg" width="50" height="50"></a></li>
+                <li><a href="https://www.linkedin.com/feed/"><img src="assets/icons/linkedin.svg" width="50" height="50"></a></li>
+            </ul> 
         </nav>
 
         <div class="hero-content">
@@ -140,5 +146,39 @@
         </div>
     </section>
 
+    <section class="section-divider">
+        <div class="skewed-right"></div>
+    </section>
+
+    <section class="contact-section">
+        <div class="contact-info">
+            
+            <img src="assets/images/contact_me.svg" width="200" height="500">
+        </div>
+        <form class="contact-form">
+            <h2>Contact Me</h2>
+            <p>Feel free to reach out to me anytime!</p>
+            <input type="text" placeholder="Name" name="name" required>
+            <input type="email" placeholder="Email" name="email" required>
+            <textarea placeholder="Message" name="message" required></textarea>
+            <button type="submit" class="custom-btn">Submit</button>
+        </form>
+    </section>
+      
+    <footer>
+        <div class="footer-top">
+            <div class="logo">
+                <p>ALEX METZGER</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <ul class="social-icons">
+                    <li><a href="#"><img src="assets/icons/email.svg" width="50" height="50"></a></li>
+                    <li><a href="#"><img src="assets/icons/phone.svg" width="50" height="50"></a></li>
+                    <li><a href="#"><img src="assets/icons/linkedin.svg" width="50" height="50"></a></li>
+            </ul> 
+            <p>&copy; Copyright. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
