fully-responsive design complete

--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,37 @@
         });
     </script>
     <script src="js/ShapeIntersectionObserver.js"></script>
+    <script src="js/navbarController.js"></script>
 </head>
 <body>
     <header class="hero">
         <nav class="navbar">
-            <ul class="nav-links">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        
+            <ul class="mobile-menu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
 
+            <ul class="nav-links">
+                <li><a href="#d">About</a></li>
+                <li><a href="#d">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+
             <ul class="social-icons">
-                <li><a href="#"><img src="assets/icons/email-blue.svg" width="50" height="50"></a></li>
-                <li><a href="#"><img src="assets/icons/phone-blue.svg" width="50" height="50"></a></li>
-                <li><a href="https://www.linkedin.com/in/alex-metzger-699802233/"><img src="assets/icons/linkedin-blue.svg" width="50" height="50"></a></li>
+                <li><a href="#"><img src="assets/icons/email-blue.svg" width="25" height="25"></a></li>
+                <li><a href="#"><img src="assets/icons/phone-blue.svg" width="20" height="20"></a></li>
+                <li><a href="https://www.linkedin.com/in/alex-metzger-699802233/"><img src="assets/icons/linkedin-blue.svg" width="25" height="25"></a></li>
             </ul> 
+
         </nav>
+        
 
         <div class="hero-content">
             <div class="text-content">
