responsiveness added to resume height and footer social icons

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         <div class="skewed-left"></div>
     </section>
 
-    <section class="scroll-section">
+    <section class="resume-section">
         <div class="shape-container">
             <section class="resume-overlay">
                 <div class="resume-container">
