hero section shadow added

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <div class="img-container">
                 <div class="image-content">
                     <img src="assets/images/blob.svg">
-                    <img src="assets/images/alex-pic.png" alt="Graphic Designer">
+                    <img src="assets/images/alex-pic.png" class="headshot" alt="Alex Metzger's Headshot">
                 </div>
             </div>
         </div>
